syntax = "proto3";

package product;

option php_namespace = "GRPC\\product";
option php_metadata_namespace = "GRPC\\product\\GPBMetadata";


service ProductGrpc {
    rpc ProductCreate (productCreateRequest) returns (productCreateResponse);
    rpc ProductSearch (productSearchRequest) returns (productSearchResponse);
    rpc ProductFilterSearch (productFilterSearchRequest) returns (productFilterSearchResponse);
    rpc ProductSimilarSearch (productSimilarSearchRequest) returns (productSimilarSearchResponse);
}

message productCreateRequest {
    string name = 1;
    string description = 2;
    string brand = 3;
    repeated string image = 4;
    string in_stock = 5;
    int32 category_id = 6;
    float price = 7;
    map<uint64, OptionList> options = 8;
    map<uint64, AttributeList> attributes = 9;
}

message productCreateResponse {
    uint64 id = 1;
    string name = 2;
}

message OptionList {
    repeated string values = 1;
}

message AttributeList {
    repeated string values = 1;
}

message productSearchRequest {
    string name = 1;
}

message productSearchResponse {
    repeated product_name result = 1;
}

message product_name {
    string name = 1;
}

message productFilterSearchRequest {
    string name = 1;
    repeated attributes list = 2;
}

message attributes {
    uint64 attribute_id = 1;
    uint64 attribute_value_id = 2;
}

message productFilterSearchResponse {
    repeated product_name result = 1;
}

message productSimilarSearchRequest {
    uint64 product_id = 1;
}

message productSimilarSearchResponse {
    repeated product_name result = 1;
}
